# microbit-1kHz-accel-streamer

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  accel_plotter.py  ble_speed_test.py  codal.json  index.html  index.html.bak  manifest.json  requirements.txt  sw.js
libraries/codal-core/: CMakeLists.txt
libraries/codal-microbit-nrf5sdk/: CMakeLists.txt
libraries/codal-microbit-v2/ld/: nrf52833-softdevice.ld
source/: FastUARTService.cpp  FastUARTService.h  flash.sh  main.cpp
source/samples/: Tests.h
utils/: camera_capture.py  camera_v4k.py
